--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="success-text">Success!</div>
                 <div class="description line-1"> Azure DevOps Project has been successfully setup</div>
                 <div class="description line-2"> Your HTML app is up and running on Azure</div>
-                <div class="description line-3"> This is the new update</div>
+                <div class="description line-3"> Right now you are in first feature branch</div>
                 <div class="next-steps-container">
                     <div class="next-steps-header">Next up</div>
                     <div class="next-steps-body">
